--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,15 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "pathfinder"
-version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.11"
+version = "1.0.0"
+description = ""
+readme = ""
+requires-python = "==3.12.8"
+license = {text = "UNKNOWN"}
+authors = []
 dependencies = [
     "auditwheel>=6.4.1",
     "cibuildwheel>=3.0.1",
@@ -13,3 +19,10 @@ dependencies = [
     "twine>=6.1.0",
     "wheel>=0.45.1",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["*"]
+
+[tool.setuptools]
+include-package-data = true
