--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,7 +1,4 @@
-# This starter workflow is for a CMake project running on multiple platforms. There is a different starter workflow if you just want a single platform.
-# See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
-
-name: Build wheels
+name: Build Wheels
 
 on:
   push:
@@ -11,11 +8,13 @@ on:
 jobs:
   build_wheels:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Cache vcpkg
+      # Cache vcpkg installed packages to speed up subsequent runs
+      - name: Cache vcpkg packages
         uses: actions/cache@v4
         with:
           path: |
@@ -25,31 +24,34 @@ jobs:
             ./vcpkg/downloads
           key: ${{ runner.os }}-vcpkg-${{ hashFiles('vcpkg.json') }}
 
-      - name: Install Python & cibuildwheel
-        run: |
-          python -m pip install cibuildwheel
+      # Cache entire vcpkg root to avoid re-cloning if unchanged
+      - name: Cache vcpkg root
+        uses: actions/cache@v4
+        with:
+          path: ./vcpkg
+          key: ${{ runner.os }}-vcpkg-root
 
-      - name: Set up vcpkg
+      - name: Install dependencies & vcpkg
         run: |
-          git clone https://github.com/microsoft/vcpkg.git
+          # Clone vcpkg if not cached
+          if [ ! -d "./vcpkg" ]; then
+            git clone https://github.com/microsoft/vcpkg.git
+          fi
           ./vcpkg/bootstrap-vcpkg.sh
-          ./vcpkg/vcpkg install ompl octomap
-        
-      - name: Install CMake
-        run: sudo apt-get update && sudo apt-get install -y cmake
+          ./vcpkg/vcpkg install ompl octomap pybind11
 
-      - name: Build native library with CMake
+      - name: Install Python build tools
         run: |
-          mkdir build
-          cd build
-          cmake .. -DCMAKE_TOOLCHAIN_FILE="${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake" -DCMAKE_BUILD_TYPE=Release
-          cmake --build . --config Release
-          mv *.so ../pathfinder/
+          python -m pip install --upgrade pip
+          pip install scikit-build-core[pyproject] cibuildwheel auditwheel patchelf twine setuptools wheel
 
-      - name: Build wheels
-        run: |
-          python -m cibuildwheel --output-dir wheelhouse
+      - name: Build wheels with cibuildwheel
         env:
           CIBW_SKIP: "pp* *-musllinux*"
           CIBW_BUILD: "cp311-*"
           CMAKE_TOOLCHAIN_FILE: "${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake"
+        run: |
+          python -m cibuildwheel --output-dir wheelhouse
+
+      - name: List built wheels
+        run: ls -l wheelhouse
