--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -37,6 +37,10 @@ jobs:
           if [ ! -d "./vcpkg" ]; then
             git clone https://github.com/microsoft/vcpkg.git
           fi
+          cd ./vcpkg
+          git pull
+          ./vckpkg update
+          cd ..
           ./vcpkg/bootstrap-vcpkg.sh
           ./vcpkg/vcpkg install ompl octomap pybind11
 
