--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -40,7 +40,7 @@ jobs:
           cd ./vcpkg
           git pull
           cd ..
-          ./vcpkg/vckpkg update
+          ./vcpkg/vcpkg update
           ./vcpkg/bootstrap-vcpkg.sh
           ./vcpkg/vcpkg install ompl octomap pybind11
 
