--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -35,7 +35,7 @@ jobs:
           # For Linux (manylinux) builds:
           CIBW_BEFORE_ALL_LINUX: >
             yum update -y &&
-            yum install -y git linux-headers cmake unzip curl tar zip perl-IPC-Cmd &&
+            yum install -y git autoconf automake libtool m4 pkgconfig cmake unzip curl tar zip perl-IPC-Cmd &&
             git clone https://github.com/microsoft/vcpkg.git /tmp/vcpkg &&
             /tmp/vcpkg/bootstrap-vcpkg.sh &&
             /tmp/vcpkg/vcpkg install ompl octomap pybind11 &&
