--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Build wheels with cibuildwheel
         env:
-          CIBW_SKIP: "pp* *-musllinux*" # Skip PyPy and musllinux builds
-          CIBW_BUILD: "cp311-*"         # Only build for CPython 3.11
+          # CIBW_SKIP: "pp* *-musllinux*" # Skip PyPy and musllinux builds
+          CIBW_BUILD: "cp311-manylinux_x86_64*"         # Only build for CPython 3.11
           
           # --- Environment variables for cibuildwheel's build environment ---
           # These commands run INSIDE the cibuildwheel Docker container (for Linux)
@@ -48,7 +48,6 @@ jobs:
             yum install -y git autoconf automake libtool m4 pkgconfig cmake unzip curl tar zip perl-IPC-Cmd &&
             git clone https://github.com/microsoft/vcpkg.git /tmp/vcpkg &&
             /tmp/vcpkg/bootstrap-vcpkg.sh &&
-            /tmp/vcpkg/vcpkg install ompl octomap pybind11 &&
             export CMAKE_TOOLCHAIN_FILE=/tmp/vcpkg/scripts/buildsystems/vcpkg.cmake &&
             export VCPKG_ROOT=/tmp/vcpkg &&
             export CMAKE_PREFIX_PATH="/tmp/vcpkg/installed/x64-linux/debug;/tmp/vcpkg/installed/x64-linux/release:${CMAKE_PREFIX_PATH}" 
