--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,8 +1,10 @@
 name: Deploy pathfinder
+
 on:
   push:
     branches:
       - main
+
 jobs:
   build_wheels:
     name: Build wheel on ${{ matrix.os }}
@@ -11,13 +13,23 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Checkout
+      - uses: actions/checkout@v4
 
-    - uses: actions/setup-python@v5
-      name: Install Python
-      with:
-        python-version: '3.11'
+      - uses: actions/setup-python@v5
+        name: Install Python
+        with:
+          python-version: '3.11'
 
-    - name: Build wheels
-    - uses: pypa/cibuildwheel@2.23.3
+      - name: Install build tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install cibuildwheel
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@2.23.3
+        env:
+          CIBW_BUILD: "cp311-*"
+          CIBW_SKIP: "pp* *-musllinux*"
