--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -28,8 +28,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install cibuildwheel
 
-      - name: Build wheels
-        uses: pypa/cibuildwheel@2.23.3
+      - uses: pypa/cibuildwheel@2.23.3
         env:
           CIBW_BUILD: "cp311-*"
           CIBW_SKIP: "pp* *-musllinux*"
