--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,34 +1,51 @@
-name: Deploy pathfinder
-
+name: Build Wheels
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
 
 jobs:
   build_wheels:
-    name: Build wheel on ${{ matrix.os }}
+    name: Build wheels on ${{ matrix.os }}-${{ matrix.arch }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        os:
-          - ubuntu-latest
-
+        include:
+        - os: ubuntu-latest
+          pybuilds: cp3{10,11,12,13}-manylinux_x86_64
+          arch: x86_64
+          id: linux_x86_64
+        - os: ubuntu-24.04-arm
+          pybuilds: cp3{10,11,12,13}-manylinux_aarch64
+          arch: aarch64
+          id: linux_arm64
+        - os: macos-13
+          pybuilds: cp3{10,11,12,13}-macosx_x86_64
+          arch: x86_64
+          id: macos_x86
+        - os: macos-15
+          pybuilds: cp3{10,11,12,13}-macosx_arm64
+          arch: arm64
+          id: macos_arm64
     steps:
-      - name: Checkout
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
-        name: Install Python
+      - name: Check out repository code
+        uses: actions/checkout@v4
         with:
-          python-version: '3.11'
+          submodules: 'recursive'
 
-      - name: Install build tools
-        run: |
-          python -m pip install --upgrade pip
-          pip install cibuildwheel
-
-      - uses: pypa/cibuildwheel@2.23.3
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.23.2
+        with:
+          package-dir: py-bindings
         env:
-          CIBW_BUILD: "cp311-*"
-          CIBW_SKIP: "pp* *-musllinux*"
+          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+          OMPL_BUILD_ARCH: ${{ matrix.arch }}
+          CIBW_BUILD: ${{ matrix.pybuilds }}
+          CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32"
+          CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET="15.0"
+      - uses: actions/upload-artifact@v4
+        with:
+          name: wheels-${{ matrix.os }}-${{ matrix.arch }}
+          path: wheelhouse
