--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           package-dir: .
         env:
-          CIBW_BEFORE_ALL_LINUX: apt update && apt install -y libompl-dev liboctomap-dev
+          CIBW_BEFORE_ALL_LINUX: apk update && apk add -y libompl-dev liboctomap-dev
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
           OMPL_BUILD_ARCH: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.pybuilds }}
