--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -40,7 +40,21 @@ jobs:
         with:
           package-dir: .
         env:
-          CIBW_BEFORE_ALL_LINUX: apk update && apk add -y libompl-dev liboctomap-dev
+          CIBW_BEFORE_ALL_LINUX: |
+            yum install -y epel-release
+            yum install -y cmake make gcc-c++ wget git
+        
+            git clone https://github.com/OctoMap/octomap.git
+            cd octomap && mkdir build && cd build
+            cmake .. -DCMAKE_INSTALL_PREFIX=/usr/local
+            make -j$(nproc) && make install
+            cd ../..
+        
+            git clone https://github.com/ompl/ompl.git
+            cd ompl && mkdir -p build/Release && cd build/Release
+            cmake ../.. -DCMAKE_INSTALL_PREFIX=/usr/local
+            make -j$(nproc) && make install
+            cd ../../..
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
           OMPL_BUILD_ARCH: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.pybuilds }}
