--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -42,8 +42,17 @@ jobs:
         env:
           CIBW_BEFORE_ALL_LINUX: |
             yum install -y epel-release
-            yum install -y cmake make gcc-c++ wget git
-        
+            yum install -y cmake make gcc-c++ wget git bzip2
+            
+            BOOST_VERSION=1.84.0
+            BOOST_DIR=boost_${BOOST_VERSION//./_}
+            wget -q https://boostorg.jfrog.io/artifactory/main/release/${BOOST_VERSION}/source/${BOOST_DIR}.tar.bz2
+            tar --bzip2 -xf ${BOOST_DIR}.tar.bz2
+            cd ${BOOST_DIR}
+            ./bootstrap.sh --prefix=/usr/local
+            ./b2 install -j$(nproc)
+            cd ..
+    
             git clone https://github.com/OctoMap/octomap.git
             cd octomap && mkdir build && cd build
             cmake .. -DCMAKE_INSTALL_PREFIX=/usr/local
