--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -42,28 +42,34 @@ jobs:
         env:
           CIBW_BEFORE_ALL_LINUX: |
             yum install -y epel-release
-            yum install -y cmake make gcc-c++ bzip2 wget git tar
+            yum install -y cmake make gcc-c++ bzip2 wget git tar sudo
+
+            boost_version=1.87.0
+            curl -L "https://archives.boost.io/release/${boost_version}/source/boost_${boost_version//./_}.tar.bz2" | tar xj
+            python_include_path=$(python3 -c "from sysconfig import get_paths as gp; print(gp()['include'])")
+            pip install numpy
             
-            BOOST_VERSION=1.84.0
-            BOOST_DIR=boost_${BOOST_VERSION//./_}
-            wget -q https://boostorg.jfrog.io/artifactory/main/release/${BOOST_VERSION}/source/${BOOST_DIR}.tar.bz2
-            tar --bzip2 -xf ${BOOST_DIR}.tar.bz2
-            cd ${BOOST_DIR}
-            ./bootstrap.sh --with-libraries=filesystem,serialization,system --prefix=/usr/local
-            ./b2 install -j$(nproc)
-            cd ..
-    
+            ./bootstrap.sh
+            sudo ./b2 \
+            --with-serialization \
+            --with-filesystem \
+            --with-system \
+            --with-program_options \
+            --with-python \
+            install
+            
+            git clone https://github.com/ompl/ompl.git
+            cd ompl && mkdir -p build/Release && cd build/Release
+            cmake ../.. -DCMAKE_INSTALL_PREFIX=/usr/local
+            make -j$(nproc) && make install
+            cd ../../..
+        
             git clone https://github.com/OctoMap/octomap.git
             cd octomap && mkdir build && cd build
             cmake .. -DCMAKE_INSTALL_PREFIX=/usr/local
             make -j$(nproc) && make install
             cd ../..
         
-            git clone https://github.com/ompl/ompl.git
-            cd ompl && mkdir -p build/Release && cd build/Release
-            cmake ../.. -DCMAKE_INSTALL_PREFIX=/usr/local
-            make -j$(nproc) && make install
-            cd ../../..
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
           OMPL_BUILD_ARCH: ${{ matrix.arch }}
           CIBW_BUILD: ${{ matrix.pybuilds }}
