--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -43,7 +43,6 @@ jobs:
           CIBW_BEFORE_ALL_LINUX: |
             yum install -y epel-release
             yum install -y cmake make gcc-c++ bzip2 wget git zip unzip tar
-            yum install -y vcpkg
 
             git clone https://github.com/microsoft/vcpkg.git
             bash vcpkg/bootstrap-vcpkg.sh
@@ -61,6 +60,7 @@ jobs:
           CIBW_BUILD: ${{ matrix.pybuilds }}
           CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32"
           CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET="15.0"
+          CIBW_ENVIRONMENT_LINUX: CMAKE_TOOLCHAIN_FILE=/vcpkg/scripts/buildsystems/vcpkg.cmake
 
       - uses: actions/upload-artifact@v4
         with:
