--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -43,7 +43,7 @@ jobs:
           CIBW_BEFORE_ALL_LINUX: |
             yum install -y epel-release
             yum install -y cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf
-            yum install -y libtool intltool automake autoconf-archive gettext
+            yum install -y libtool intltool automake autoconf-archive gettext perl-FindBin
  
 
             git clone https://github.com/microsoft/vcpkg.git
