--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["scikit-build-core", "pybind11", "ninja"]
 build-backend = "scikit_build_core.build"
 
 [project]
- don't knowname = "pathfinder"
+name = "pathfinder"
 version = "1.0.0"
 description = "Pathfinder is a wrapper over the famous Octomap and OMPL libraries."
 readme = "README.md"
