--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
 ]
 
 [tool.scikit-build]
-build-dir = "build"
+wheel.install-dir = "pathfinder"
 wheel.packages = ["pathfinder"]
 cmake.verbose = true
 cmake.minimum-version = "3.15"
