--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,4 @@ dependencies = [
 ]
 
 [tool.scikit-build]
-wheel.install-dir = "pathfinder"
-wheel.packages = ["pathfinder"]
-cmake.verbose = true
-cmake.minimum-version = "3.15"
+wheel.install-dir = "."
