--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           output-dir: wheelhouse
         env:
-          CIBW_BUILD: ${{ matrix.python }}-${{ matrix.buildplat[1] }}
+          CIBW_BUILD:  ${{ matrix.pybuilds }}
           CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32"
           CIBW_BEFORE_ALL_LINUX: > 
             git clone https://github.com/microsoft/vcpkg.git &&
