--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build_wheels:
@@ -40,43 +40,12 @@ jobs:
         with:
           output-dir: wheelhouse
         env:
-          CIBW_BUILD:  ${{ matrix.pybuilds }}
-          CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32"
-          CIBW_BEFORE_ALL_LINUX: > 
-            yum install -y epel-release **
-            yum install -y cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf &&
-            yum install -y libtool intltool automake autoconf-archive gettext perl-FindBin &&
-            git clone https://github.com/microsoft/vcpkg.git &&
-            ./vcpkg/bootstrap-vcpkg.sh &&
-            ./vcpkg/vcpkg integrate install &&
-            ./vcpkg/vcpkg install ompl octomap            
+          CIBW_BUILD: ${{ matrix.pybuilds }}
+          CIBW_BEFORE_ALL: yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh
+          CIBW_BEFORE_BUILD: ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl 
+          CIBW_ENVIRONMENT: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake"
+          CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32"       
 
-      # - name: Install and configure vcpkg
-      #   run: |
-      #     git clone https://github.com/microsoft/vcpkg.git
-      #     ./vcpkg/bootstrap-vcpkg.sh
-      #     ./vcpkg/vcpkg install ompl octomap
-
-      # - name: Install uv
-      #   run: |
-      #     curl -LsSf https://astral.sh/uv/install.sh | sh
-      #     echo "$HOME/.cargo/bin" >> $GITHUB_PATH  # For Linux/macOS
-      #   shell: bash
-
-
-      # - name: Install cibuildwheel using uv
-      #   run: |
-      #     uv add cibuildwheel
-      #     env:
-      #       CIBW_BEFORE_BUILD: echo "vcpkg installed"
-      #       CMAKE_TOOLCHAIN_FILE: ${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
-      #       CIBW_BUILD: ${{ matrix.pybuilds }}
-      #       CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32"
-
-      # - name: Build wheels
-      #   run: |
-      #     uv run cibuildwheel --output-dir wheelhouse
-          
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-${{ matrix.os }}-${{ matrix.arch }}
