build: use `LD_PATH` for dynamic OMPL libs

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -44,9 +44,8 @@ jobs:
           CIBW_BUILD: ${{ matrix.pybuilds }}
           CIBW_BEFORE_ALL: yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh
           CIBW_BEFORE_BUILD: ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl
-          CIBW_ENVIRONMENT: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake"
+          CIBW_ENVIRONMENT: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" LD_LIBRARY_PATH="vcpkg/packages/ompl_x64-linux/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}"
           CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32" 
-          CIBW_REPAIR_WHEEL_COMMAND: ""
 
       - uses: actions/upload-artifact@v4
         with:
