--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-
+          
       - name: Build wheels
         uses: pypa/cibuildwheel@v3.1.1
         with:
@@ -43,8 +43,10 @@ jobs:
         env:
           CIBW_BUILD: ${{ matrix.pybuilds }}
           CIBW_BEFORE_ALL: yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh
-          CIBW_BEFORE_BUILD: ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl
-          CIBW_ENVIRONMENT: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" LD_LIBRARY_PATH="vcpkg/packages/ompl_x64-linux/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}"
+          CIBW_BEFORE_BUILD_MACOS: brew update && brew brew install cmake boost eigen wget git && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh
+          CIBW_BEFORE_BUILD_LINUX: ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl
+          CIBW_ENVIRONMENT_LINUX: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" LD_LIBRARY_PATH="vcpkg/packages/ompl_x64-linux/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}"
+          CIBW_ENVIRONMENT_MACOS: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" LD_LIBRARY_PATH="vcpkg/packages/ompl_x64-osx/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}" DYLD_LIBRARY_PATH="vcpkg/packages/ompl_x64-osx/lib${DYLD_LIBRARY_PATH:+:$DYLD_LIBRARY_PATH}"
           CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32" 
 
       - uses: actions/upload-artifact@v4
