--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -42,10 +42,9 @@ jobs:
           output-dir: wheelhouse
         env:
           CIBW_BUILD: ${{ matrix.pybuilds }}
-          CIBW_BEFORE_ALL: yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh
           CIBW_BEFORE_BUILD_MACOS: brew update && brew brew install cmake boost eigen wget git && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh
-          CIBW_BEFORE_BUILD_LINUX: ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl
-          CIBW_ENVIRONMENT_LINUX: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" LD_LIBRARY_PATH="vcpkg/packages/ompl_x64-linux/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}"
+          CIBW_BEFORE_BUILD_LINUX: yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh && ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl && cp $ORIGIN/libompl.so.1.7.0 $ORIGIN/libompl.so.18 && cp $ORIGIN/libompl.so.1.7.0 $ORIGIN/libompl.so && ll $ORIGIN
+          CIBW_ENVIRONMENT_LINUX: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake"
           CIBW_ENVIRONMENT_MACOS: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" LD_LIBRARY_PATH="vcpkg/packages/ompl_x64-osx/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}" DYLD_LIBRARY_PATH="vcpkg/packages/ompl_x64-osx/lib${DYLD_LIBRARY_PATH:+:$DYLD_LIBRARY_PATH}"
           CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32" 
 
